exports[`replace inline js fragment with dummy fragment multiline 1`] = `
"
                  
                               
          fragment _ on Viewer {
            ...F,,,,,,,,,,,,,,,,,,,,,,,,,,,,, ,
              ,,,,, ,,,,,,,,,,,,,,,
              ,,,,, ,,,,,,,,,,,,,,,
            ,,, name
          }
          
        
    "
`;

exports[`replace inline js fragment with dummy fragment single line 1`] = `
"
                  
                               
          fragment _ on Viewer {
            ...F,,,,,,,,,,,,,,,,,,,,,,,,,,,,,, name
          }
          
        
    "
`;

exports[`test add dummy fragment name if missing (relay) 1`] = `
"
                
                             
        fragment _ on Viewer {
          image
        }
        
      
  "
`;

exports[`test add dummy fragment name if missing (relay) and \`on\` in next line 1`] = `
"
                
                             
        fragment
              _ on Viewer {
          image
        }
        
      
  "
`;

exports[`test extract embedded queries 1`] = `
"
                
                             
        fragment test on Viewer {
          image
        }
        
      
  "
`;

exports[`test extract embedded queries multiline tag 1`] = `
"
                      
     
      fragment test on Test {
        name
      }
     
  "
`;

exports[`test extract multiple embedded queries 1`] = `
"
                
                             
        fragment test on Viewer {
          image
        }
         
      

                
                             
        fragment test on Viewer {
          image
        }
         
      

                       
      fragment test on Viewer {
        image
      }
      
  "
`;

exports[`test plain queries 1`] = `
"
    fragment test on Viewer {
      image
    }
  "
`;

exports[`test works with invalid queries 1`] = `
"
    fragment Viewer {
      image
    }
  "
`;
